@@ -50,8 +50,6 @@ import org.elasticsearch.xpack.core.ccr.action.FollowParameters;
 import org.elasticsearch.xpack.core.ccr.action.ResumeFollowAction;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Objects;
@@ -351,98 +349,86 @@ public class TransportResumeFollowAction extends TransportMasterNodeAction<Resum
      * These dynamic settings don't affect how documents are indexed (affect index time text analysis) and / or
      * are inconvenient if they were replicated (e.g. changing number of replicas).
      */
-    static final Set<Setting<?>> NON_REPLICATED_SETTINGS;
-
-    static {
-        final Set<Setting<?>> nonReplicatedSettings = new HashSet<>();
-        nonReplicatedSettings.add(IndexMetaData.INDEX_NUMBER_OF_REPLICAS_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_AUTO_EXPAND_REPLICAS_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_ROUTING_EXCLUDE_GROUP_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_ROUTING_INCLUDE_GROUP_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_ROUTING_REQUIRE_GROUP_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_READ_ONLY_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_BLOCKS_READ_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_BLOCKS_WRITE_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_BLOCKS_METADATA_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_BLOCKS_READ_ONLY_ALLOW_DELETE_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.INDEX_PRIORITY_SETTING);
-        nonReplicatedSettings.add(IndexMetaData.SETTING_WAIT_FOR_ACTIVE_SHARDS);
-
-        nonReplicatedSettings.add(EnableAllocationDecider.INDEX_ROUTING_REBALANCE_ENABLE_SETTING);
-        nonReplicatedSettings.add(EnableAllocationDecider.INDEX_ROUTING_ALLOCATION_ENABLE_SETTING);
-        nonReplicatedSettings.add(ShardsLimitAllocationDecider.INDEX_TOTAL_SHARDS_PER_NODE_SETTING);
-        nonReplicatedSettings.add(MaxRetryAllocationDecider.SETTING_ALLOCATION_MAX_RETRY);
-        nonReplicatedSettings.add(UnassignedInfo.INDEX_DELAYED_NODE_LEFT_TIMEOUT_SETTING);
-
-        nonReplicatedSettings.add(IndexSettings.MAX_RESULT_WINDOW_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_WARMER_ENABLED_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_REFRESH_INTERVAL_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_RESCORE_WINDOW_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_INNER_RESULT_WINDOW_SETTING);
-        nonReplicatedSettings.add(IndexSettings.DEFAULT_FIELD_SETTING);
-        nonReplicatedSettings.add(IndexSettings.QUERY_STRING_LENIENT_SETTING);
-        nonReplicatedSettings.add(IndexSettings.QUERY_STRING_ANALYZE_WILDCARD);
-        nonReplicatedSettings.add(IndexSettings.QUERY_STRING_ALLOW_LEADING_WILDCARD);
-        nonReplicatedSettings.add(IndexSettings.ALLOW_UNMAPPED);
-        nonReplicatedSettings.add(IndexSettings.INDEX_SEARCH_IDLE_AFTER);
-        nonReplicatedSettings.add(IndexSettings.INDEX_SOFT_DELETES_RETENTION_OPERATIONS_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_SOFT_DELETES_RETENTION_LEASE_PERIOD_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_SCRIPT_FIELDS_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_REGEX_LENGTH_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_TERMS_COUNT_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_ANALYZED_OFFSET_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_DOCVALUE_FIELDS_SEARCH_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_TOKEN_COUNT_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_SLICES_PER_SCROLL);
-        nonReplicatedSettings.add(IndexSettings.MAX_ADJACENCY_MATRIX_FILTERS_SETTING);
-        nonReplicatedSettings.add(IndexSettings.DEFAULT_PIPELINE);
-        nonReplicatedSettings.add(IndexSettings.INDEX_SEARCH_THROTTLED);
-        nonReplicatedSettings.add(IndexSettings.INDEX_TRANSLOG_RETENTION_AGE_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_TRANSLOG_RETENTION_SIZE_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_TRANSLOG_GENERATION_THRESHOLD_SIZE_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_TRANSLOG_FLUSH_THRESHOLD_SIZE_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_TRANSLOG_DURABILITY_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_TRANSLOG_SYNC_INTERVAL_SETTING);
-        nonReplicatedSettings.add(IndexSettings.INDEX_GC_DELETES_SETTING);
-        nonReplicatedSettings.add(IndexSettings.MAX_REFRESH_LISTENERS_PER_SHARD);
-
-        nonReplicatedSettings.add(IndicesRequestCache.INDEX_CACHE_REQUEST_ENABLED_SETTING);
-        nonReplicatedSettings.add(BitsetFilterCache.INDEX_LOAD_RANDOM_ACCESS_FILTERS_EAGERLY_SETTING);
-
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_DEBUG_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_WARN_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_INFO_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_TRACE_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_WARN_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_DEBUG_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_INFO_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_TRACE_SETTING);
-        nonReplicatedSettings.add(SearchSlowLog.INDEX_SEARCH_SLOWLOG_LEVEL);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_WARN_SETTING);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_DEBUG_SETTING);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_INFO_SETTING);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_TRACE_SETTING);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_LEVEL_SETTING);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_REFORMAT_SETTING);
-        nonReplicatedSettings.add(IndexingSlowLog.INDEX_INDEXING_SLOWLOG_MAX_SOURCE_CHARS_TO_LOG_SETTING);
-
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_COMPOUND_FORMAT_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_MAX_MERGE_AT_ONCE_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_SEGMENTS_PER_TIER_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_DELETES_PCT_ALLOWED_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_EXPUNGE_DELETES_ALLOWED_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_FLOOR_SEGMENT_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_MAX_MERGE_AT_ONCE_EXPLICIT_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_MAX_MERGED_SEGMENT_SETTING);
-        nonReplicatedSettings.add(MergePolicyConfig.INDEX_MERGE_POLICY_RECLAIM_DELETES_WEIGHT_SETTING);
-
-        nonReplicatedSettings.add(MergeSchedulerConfig.AUTO_THROTTLE_SETTING);
-        nonReplicatedSettings.add(MergeSchedulerConfig.MAX_MERGE_COUNT_SETTING);
-        nonReplicatedSettings.add(MergeSchedulerConfig.MAX_THREAD_COUNT_SETTING);
-        nonReplicatedSettings.add(EngineConfig.INDEX_CODEC_SETTING);
-
-        NON_REPLICATED_SETTINGS = Collections.unmodifiableSet(nonReplicatedSettings);
-    }
+    static final Set<Setting<?>> NON_REPLICATED_SETTINGS = Set.of(
+            IndexMetaData.INDEX_NUMBER_OF_REPLICAS_SETTING,
+            IndexMetaData.INDEX_AUTO_EXPAND_REPLICAS_SETTING,
+            IndexMetaData.INDEX_ROUTING_EXCLUDE_GROUP_SETTING,
+            IndexMetaData.INDEX_ROUTING_INCLUDE_GROUP_SETTING,
+            IndexMetaData.INDEX_ROUTING_REQUIRE_GROUP_SETTING,
+            IndexMetaData.INDEX_READ_ONLY_SETTING,
+            IndexMetaData.INDEX_BLOCKS_READ_SETTING,
+            IndexMetaData.INDEX_BLOCKS_WRITE_SETTING,
+            IndexMetaData.INDEX_BLOCKS_METADATA_SETTING,
+            IndexMetaData.INDEX_BLOCKS_READ_ONLY_ALLOW_DELETE_SETTING,
+            IndexMetaData.INDEX_PRIORITY_SETTING,
+            IndexMetaData.SETTING_WAIT_FOR_ACTIVE_SHARDS,
+            EnableAllocationDecider.INDEX_ROUTING_REBALANCE_ENABLE_SETTING,
+            EnableAllocationDecider.INDEX_ROUTING_ALLOCATION_ENABLE_SETTING,
+            ShardsLimitAllocationDecider.INDEX_TOTAL_SHARDS_PER_NODE_SETTING,
+            MaxRetryAllocationDecider.SETTING_ALLOCATION_MAX_RETRY,
+            UnassignedInfo.INDEX_DELAYED_NODE_LEFT_TIMEOUT_SETTING,
+            IndexSettings.MAX_RESULT_WINDOW_SETTING,
+            IndexSettings.INDEX_WARMER_ENABLED_SETTING,
+            IndexSettings.INDEX_REFRESH_INTERVAL_SETTING,
+            IndexSettings.MAX_RESCORE_WINDOW_SETTING,
+            IndexSettings.MAX_INNER_RESULT_WINDOW_SETTING,
+            IndexSettings.DEFAULT_FIELD_SETTING,
+            IndexSettings.QUERY_STRING_LENIENT_SETTING,
+            IndexSettings.QUERY_STRING_ANALYZE_WILDCARD,
+            IndexSettings.QUERY_STRING_ALLOW_LEADING_WILDCARD,
+            IndexSettings.ALLOW_UNMAPPED,
+            IndexSettings.INDEX_SEARCH_IDLE_AFTER,
+            IndexSettings.INDEX_SOFT_DELETES_RETENTION_OPERATIONS_SETTING,
+            IndexSettings.INDEX_SOFT_DELETES_RETENTION_LEASE_PERIOD_SETTING,
+            IndexSettings.MAX_SCRIPT_FIELDS_SETTING,
+            IndexSettings.MAX_REGEX_LENGTH_SETTING,
+            IndexSettings.MAX_TERMS_COUNT_SETTING,
+            IndexSettings.MAX_ANALYZED_OFFSET_SETTING,
+            IndexSettings.MAX_DOCVALUE_FIELDS_SEARCH_SETTING,
+            IndexSettings.MAX_TOKEN_COUNT_SETTING,
+            IndexSettings.MAX_SLICES_PER_SCROLL,
+            IndexSettings.MAX_ADJACENCY_MATRIX_FILTERS_SETTING,
+            IndexSettings.DEFAULT_PIPELINE,
+            IndexSettings.INDEX_SEARCH_THROTTLED,
+            IndexSettings.INDEX_TRANSLOG_RETENTION_AGE_SETTING,
+            IndexSettings.INDEX_TRANSLOG_RETENTION_SIZE_SETTING,
+            IndexSettings.INDEX_TRANSLOG_GENERATION_THRESHOLD_SIZE_SETTING,
+            IndexSettings.INDEX_TRANSLOG_FLUSH_THRESHOLD_SIZE_SETTING,
+            IndexSettings.INDEX_TRANSLOG_DURABILITY_SETTING,
+            IndexSettings.INDEX_TRANSLOG_SYNC_INTERVAL_SETTING,
+            IndexSettings.INDEX_GC_DELETES_SETTING,
+            IndexSettings.MAX_REFRESH_LISTENERS_PER_SHARD,
+            IndicesRequestCache.INDEX_CACHE_REQUEST_ENABLED_SETTING,
+            BitsetFilterCache.INDEX_LOAD_RANDOM_ACCESS_FILTERS_EAGERLY_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_DEBUG_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_WARN_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_INFO_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_FETCH_TRACE_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_WARN_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_DEBUG_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_INFO_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_THRESHOLD_QUERY_TRACE_SETTING,
+            SearchSlowLog.INDEX_SEARCH_SLOWLOG_LEVEL,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_WARN_SETTING,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_DEBUG_SETTING,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_INFO_SETTING,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_THRESHOLD_INDEX_TRACE_SETTING,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_LEVEL_SETTING,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_REFORMAT_SETTING,
+            IndexingSlowLog.INDEX_INDEXING_SLOWLOG_MAX_SOURCE_CHARS_TO_LOG_SETTING,
+            MergePolicyConfig.INDEX_COMPOUND_FORMAT_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_MAX_MERGE_AT_ONCE_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_SEGMENTS_PER_TIER_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_DELETES_PCT_ALLOWED_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_EXPUNGE_DELETES_ALLOWED_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_FLOOR_SEGMENT_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_MAX_MERGE_AT_ONCE_EXPLICIT_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_MAX_MERGED_SEGMENT_SETTING,
+            MergePolicyConfig.INDEX_MERGE_POLICY_RECLAIM_DELETES_WEIGHT_SETTING,
+            MergeSchedulerConfig.AUTO_THROTTLE_SETTING,
+            MergeSchedulerConfig.MAX_MERGE_COUNT_SETTING,
+            MergeSchedulerConfig.MAX_THREAD_COUNT_SETTING,
+            EngineConfig.INDEX_CODEC_SETTING);
 
     static Settings filter(Settings originalSettings) {
         Settings.Builder settings = Settings.builder().put(originalSettings);
